--- a/TheMovieDB/Scenes/Cell/MovieListCell.xib
+++ b/TheMovieDB/Scenes/Cell/MovieListCell.xib
@@ -9,56 +9,69 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieListCell" rowHeight="303" id="KGk-i7-Jjw" customClass="MovieListCell" customModule="TheMovieDB" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="483" height="303"/>
+        <tableViewCell contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieListCell" rowHeight="201" id="KGk-i7-Jjw" customClass="MovieListCell" customModule="TheMovieDB" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="412" height="201"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="483" height="303"/>
+                <rect key="frame" x="0.0" y="0.0" width="412" height="201"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9GV-Hb-ebx">
-                        <rect key="frame" x="0.0" y="0.0" width="202" height="303"/>
+                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YNs-tu-ku9">
+                        <rect key="frame" x="8" y="8" width="396" height="185"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9GV-Hb-ebx">
+                                <rect key="frame" x="0.0" y="0.0" width="123.33333333333333" height="185"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="9GV-Hb-ebx" secondAttribute="height" multiplier="2:3" id="jzZ-L3-ywg"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="gW9-mc-hU0">
+                                <rect key="frame" x="131.33333333333334" y="8" width="256.66666666666663" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="24" id="tHa-UW-iAK"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="14"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zhk-d0-g59">
+                                <rect key="frame" x="131.33333333333334" y="36" width="256.66666666666663" height="15.333333333333336"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="11"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="9GV-Hb-ebx" secondAttribute="height" multiplier="2:3" id="Ytq-0X-N7z"/>
+                            <constraint firstAttribute="bottom" secondItem="9GV-Hb-ebx" secondAttribute="bottom" id="32l-69-mnx"/>
+                            <constraint firstItem="9GV-Hb-ebx" firstAttribute="leading" secondItem="YNs-tu-ku9" secondAttribute="leading" id="56y-ZP-iAY"/>
+                            <constraint firstItem="zhk-d0-g59" firstAttribute="leading" secondItem="9GV-Hb-ebx" secondAttribute="trailing" constant="8" id="7lu-5r-AXV"/>
+                            <constraint firstAttribute="trailing" secondItem="gW9-mc-hU0" secondAttribute="trailing" constant="8" id="R8G-EH-85g"/>
+                            <constraint firstAttribute="trailing" secondItem="zhk-d0-g59" secondAttribute="trailing" constant="8" id="Xpc-wK-ZxQ"/>
+                            <constraint firstItem="gW9-mc-hU0" firstAttribute="top" secondItem="YNs-tu-ku9" secondAttribute="top" constant="8" id="i5U-6o-qbQ"/>
+                            <constraint firstItem="zhk-d0-g59" firstAttribute="top" secondItem="gW9-mc-hU0" secondAttribute="bottom" constant="4" id="jRl-G2-LlX"/>
+                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="zhk-d0-g59" secondAttribute="bottom" constant="8" id="rzI-Vx-Ue6"/>
+                            <constraint firstItem="9GV-Hb-ebx" firstAttribute="top" secondItem="YNs-tu-ku9" secondAttribute="top" id="vcT-d6-c4J"/>
+                            <constraint firstItem="gW9-mc-hU0" firstAttribute="leading" secondItem="9GV-Hb-ebx" secondAttribute="trailing" constant="8" id="vdg-Iw-4eW"/>
                         </constraints>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gW9-mc-hU0">
-                        <rect key="frame" x="210" y="8" width="265" height="24"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="24" id="Eam-cz-gO2"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="16"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zhk-d0-g59">
-                        <rect key="frame" x="210" y="40" width="265" height="19.333333333333329"/>
-                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    </view>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstItem="9GV-Hb-ebx" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="0gG-vv-ekI"/>
-                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="zhk-d0-g59" secondAttribute="bottom" constant="8" id="0oR-we-pYh"/>
-                    <constraint firstItem="gW9-mc-hU0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="5aa-Pu-V2b"/>
-                    <constraint firstItem="zhk-d0-g59" firstAttribute="leading" secondItem="9GV-Hb-ebx" secondAttribute="trailing" constant="8" id="BA5-Ng-U9n"/>
-                    <constraint firstItem="zhk-d0-g59" firstAttribute="top" secondItem="gW9-mc-hU0" secondAttribute="bottom" constant="8" id="EV4-OF-sD8"/>
-                    <constraint firstItem="gW9-mc-hU0" firstAttribute="leading" secondItem="9GV-Hb-ebx" secondAttribute="trailing" constant="8" id="Fki-Wa-Sqd"/>
-                    <constraint firstAttribute="trailing" secondItem="gW9-mc-hU0" secondAttribute="trailing" constant="8" id="VwO-1C-s9T"/>
-                    <constraint firstAttribute="trailing" secondItem="zhk-d0-g59" secondAttribute="trailing" constant="8" id="fel-2f-7iY"/>
-                    <constraint firstAttribute="bottom" secondItem="9GV-Hb-ebx" secondAttribute="bottom" id="jjI-pY-Wek"/>
-                    <constraint firstItem="9GV-Hb-ebx" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="pBF-ez-yti"/>
+                    <constraint firstItem="YNs-tu-ku9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="9sa-MS-g1a"/>
+                    <constraint firstAttribute="trailing" secondItem="YNs-tu-ku9" secondAttribute="trailing" constant="8" id="RMC-W6-AIO"/>
+                    <constraint firstItem="YNs-tu-ku9" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="eQx-n3-twY"/>
+                    <constraint firstAttribute="bottom" secondItem="YNs-tu-ku9" secondAttribute="bottom" constant="8" id="k7p-k4-ShS"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="descriptionLabel" destination="zhk-d0-g59" id="Vv8-en-hrD"/>
+                <outlet property="infoContainerView" destination="YNs-tu-ku9" id="kfJ-Or-wQa"/>
                 <outlet property="posterImage" destination="9GV-Hb-ebx" id="qxP-K7-lUa"/>
                 <outlet property="titleLabel" destination="gW9-mc-hU0" id="hY4-Kv-EdB"/>
             </connections>
-            <point key="canvasLocation" x="254.19847328244273" y="79.225352112676063"/>
+            <point key="canvasLocation" x="198.47328244274809" y="43.309859154929576"/>
         </tableViewCell>
     </objects>
 </document>
