--- a/TheMovieDB/Scenes/Cell/MovieListCell.xib
+++ b/TheMovieDB/Scenes/Cell/MovieListCell.xib
@@ -21,6 +21,7 @@
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9GV-Hb-ebx">
                                 <rect key="frame" x="0.0" y="0.0" width="123.33333333333333" height="185"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="9GV-Hb-ebx" secondAttribute="height" multiplier="2:3" id="jzZ-L3-ywg"/>
                                 </constraints>
