--- a/TheMovieDB/Scenes/MovieListViewController.xib
+++ b/TheMovieDB/Scenes/MovieListViewController.xib
@@ -11,6 +11,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MovieListViewController" customModule="TheMovieDB" customModuleProvider="target">
             <connections>
                 <outlet property="movieTableView" destination="iDg-em-dHT" id="CRJ-OS-pJW"/>
+                <outlet property="movieTypeButton" destination="vt2-hR-Pa8" id="fBC-ld-Kr8"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -24,11 +25,21 @@
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </tableView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vt2-hR-Pa8">
+                    <rect key="frame" x="309.66666666666669" y="59" width="67.333333333333314" height="33.333333333333343"/>
+                    <state key="normal" title="Button"/>
+                    <buttonConfiguration key="configuration" style="plain" title="Button">
+                        <fontDescription key="titleFontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="14"/>
+                        <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </buttonConfiguration>
+                </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" red="0.11372549019607843" green="0.11372549019607843" blue="0.11372549019607843" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="iDg-em-dHT" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="5jt-0m-TJr"/>
+                <constraint firstItem="vt2-hR-Pa8" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="CWK-4k-viR"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="vt2-hR-Pa8" secondAttribute="trailing" constant="16" id="Drf-4W-KOe"/>
                 <constraint firstItem="iDg-em-dHT" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Z8I-U4-hfG"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="iDg-em-dHT" secondAttribute="bottom" id="f8v-3r-aCF"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="iDg-em-dHT" secondAttribute="trailing" id="uIg-5B-86t"/>
