--- a/TheMovieDB/Scenes/MovieDetail/MovieDetailViewController.xib
+++ b/TheMovieDB/Scenes/MovieDetail/MovieDetailViewController.xib
@@ -1,22 +1,93 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MovieDetailViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MovieDetailViewController" customModule="TheMovieDB" customModuleProvider="target">
             <connections>
+                <outlet property="adultRatedIcon" destination="A8v-Cw-FvQ" id="r09-QU-vrR"/>
+                <outlet property="descriptionLabel" destination="4qZ-6u-g1m" id="eNf-1n-Wxc"/>
+                <outlet property="durationLabel" destination="gcW-lK-035" id="YjG-my-bUO"/>
+                <outlet property="movieImageView" destination="8o5-Bm-B5l" id="Qb2-Oh-3MR"/>
+                <outlet property="releaseDateLabel" destination="rde-ab-Dey" id="1Lq-Pk-dbd"/>
+                <outlet property="titleLabel" destination="WOC-Yi-4Cc" id="xnp-1c-wLe"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8o5-Bm-B5l">
+                    <rect key="frame" x="0.0" y="59" width="393" height="221"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="8o5-Bm-B5l" secondAttribute="height" multiplier="1920:1080" id="B2z-aW-vvZ"/>
+                    </constraints>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="WOC-Yi-4Cc">
+                    <rect key="frame" x="8" y="288" width="377" height="24"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="24" id="L3T-c9-eUu"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="18"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="4qZ-6u-g1m">
+                    <rect key="frame" x="12" y="316" width="369" height="0.0"/>
+                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="gcW-lK-035">
+                    <rect key="frame" x="385" y="272" width="0.0" height="0.0"/>
+                    <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="10"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="rde-ab-Dey">
+                    <rect key="frame" x="12" y="320" width="0.0" height="0.0"/>
+                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="10"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="RRatedIcon" translatesAutoresizingMaskIntoConstraints="NO" id="A8v-Cw-FvQ">
+                    <rect key="frame" x="8" y="254" width="44.666666666666664" height="18"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="18" id="1vT-Br-crU"/>
+                        <constraint firstAttribute="width" secondItem="A8v-Cw-FvQ" secondAttribute="height" multiplier="300:121" id="PNK-0T-oQY"/>
+                    </constraints>
+                </imageView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" red="0.1137254902" green="0.1137254902" blue="0.1137254902" alpha="1" colorSpace="calibratedRGB"/>
+            <constraints>
+                <constraint firstItem="A8v-Cw-FvQ" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="8" id="1fD-wH-2FG"/>
+                <constraint firstItem="8o5-Bm-B5l" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="7ZU-a7-nBD"/>
+                <constraint firstItem="WOC-Yi-4Cc" firstAttribute="top" secondItem="8o5-Bm-B5l" secondAttribute="bottom" constant="8" id="98B-NF-rtg"/>
+                <constraint firstItem="4qZ-6u-g1m" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="12" id="AjZ-Lp-hXM"/>
+                <constraint firstItem="rde-ab-Dey" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="12" id="B2u-3X-sQ5"/>
+                <constraint firstItem="gcW-lK-035" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" constant="-8" id="G90-ot-gea"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="8o5-Bm-B5l" secondAttribute="trailing" id="I5m-Hw-zdu"/>
+                <constraint firstItem="gcW-lK-035" firstAttribute="bottom" secondItem="8o5-Bm-B5l" secondAttribute="bottom" constant="-8" id="Kgs-0W-s2w"/>
+                <constraint firstItem="A8v-Cw-FvQ" firstAttribute="bottom" secondItem="8o5-Bm-B5l" secondAttribute="bottom" constant="-8" id="PqH-wN-ydt"/>
+                <constraint firstItem="WOC-Yi-4Cc" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="8" id="T6Q-RS-FKX"/>
+                <constraint firstItem="rde-ab-Dey" firstAttribute="top" secondItem="4qZ-6u-g1m" secondAttribute="bottom" constant="4" id="TPg-LH-bUg"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="4qZ-6u-g1m" secondAttribute="trailing" constant="12" id="TQj-GY-uYN"/>
+                <constraint firstItem="8o5-Bm-B5l" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="cTr-3J-8Jb"/>
+                <constraint firstItem="4qZ-6u-g1m" firstAttribute="top" secondItem="WOC-Yi-4Cc" secondAttribute="bottom" constant="4" id="npY-Pe-fy6"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="WOC-Yi-4Cc" secondAttribute="trailing" constant="8" id="zfO-3m-6E9"/>
+            </constraints>
+            <point key="canvasLocation" x="87.786259541984734" y="-11.267605633802818"/>
         </view>
     </objects>
+    <resources>
+        <image name="RRatedIcon" width="150" height="60.5"/>
+    </resources>
 </document>
