--- a/TheMovieDB/Scenes/MovieList/MovieListViewController.xib
+++ b/TheMovieDB/Scenes/MovieList/MovieListViewController.xib
@@ -20,31 +20,31 @@
             <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="iDg-em-dHT">
-                    <rect key="frame" x="0.0" y="59" width="393" height="759"/>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                </tableView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vt2-hR-Pa8">
-                    <rect key="frame" x="309.66666666666669" y="59" width="67.333333333333314" height="33.333333333333343"/>
+                    <rect key="frame" x="325.66666666666669" y="59" width="67.333333333333314" height="33.333333333333343"/>
                     <state key="normal" title="Button"/>
                     <buttonConfiguration key="configuration" style="plain" title="Button">
                         <fontDescription key="titleFontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="14"/>
                         <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </buttonConfiguration>
                 </button>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="iDg-em-dHT">
+                    <rect key="frame" x="0.0" y="59" width="393" height="793"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </tableView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" red="0.11372549019607843" green="0.11372549019607843" blue="0.11372549019607843" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="iDg-em-dHT" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="5jt-0m-TJr"/>
-                <constraint firstItem="vt2-hR-Pa8" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="CWK-4k-viR"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="vt2-hR-Pa8" secondAttribute="trailing" constant="16" id="Drf-4W-KOe"/>
-                <constraint firstItem="iDg-em-dHT" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Z8I-U4-hfG"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="iDg-em-dHT" secondAttribute="bottom" id="f8v-3r-aCF"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="iDg-em-dHT" secondAttribute="trailing" id="uIg-5B-86t"/>
+                <constraint firstAttribute="bottom" secondItem="iDg-em-dHT" secondAttribute="bottom" id="1rH-TY-7EP"/>
+                <constraint firstItem="iDg-em-dHT" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="4gT-UM-nsr"/>
+                <constraint firstItem="iDg-em-dHT" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="5V6-9K-R4p"/>
+                <constraint firstItem="vt2-hR-Pa8" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="8Hi-N2-6j8"/>
+                <constraint firstItem="vt2-hR-Pa8" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="caC-IZ-NpB"/>
+                <constraint firstItem="iDg-em-dHT" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="fGM-aA-OLx"/>
             </constraints>
-            <point key="canvasLocation" x="132" y="-11"/>
+            <point key="canvasLocation" x="130.53435114503816" y="-11.267605633802818"/>
         </view>
     </objects>
 </document>
