--- a/TheMovieDB/Scenes/MovieList/Cell/MovieListCell.xib
+++ b/TheMovieDB/Scenes/MovieList/Cell/MovieListCell.xib
@@ -27,16 +27,13 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="gW9-mc-hU0">
-                                <rect key="frame" x="131.33333333333334" y="8" width="256.66666666666663" height="24"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="24" id="tHa-UW-iAK"/>
-                                </constraints>
+                                <rect key="frame" x="131.33333333333334" y="7.9999999999999982" width="256.66666666666663" height="19.333333333333329"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="14"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zhk-d0-g59">
-                                <rect key="frame" x="131.33333333333334" y="36" width="256.66666666666663" height="15.333333333333336"/>
+                                <rect key="frame" x="131.33333333333334" y="31.333333333333332" width="256.66666666666663" height="15.333333333333332"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="11"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
