--- a/TheMovieDB/Scenes/MovieList/Cell/MovieListCell.xib
+++ b/TheMovieDB/Scenes/MovieList/Cell/MovieListCell.xib
@@ -4,12 +4,13 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieListCell" rowHeight="201" id="KGk-i7-Jjw" customClass="MovieListCell" customModule="TheMovieDB" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" indentationWidth="10" reuseIdentifier="MovieListCell" rowHeight="201" id="KGk-i7-Jjw" customClass="MovieListCell" customModule="TheMovieDB" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="412" height="201"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -38,12 +39,22 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HP8-rY-BH5" customClass="RatingView" customModule="TheMovieDB" customModuleProvider="target">
+                                <rect key="frame" x="4" y="149" width="33" height="32"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="32" id="G9R-GY-e2N"/>
+                                    <constraint firstAttribute="width" secondItem="HP8-rY-BH5" secondAttribute="height" multiplier="32:31" id="wFn-ds-7Cw"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstAttribute="bottom" secondItem="HP8-rY-BH5" secondAttribute="bottom" constant="4" id="0lT-sb-Qsm"/>
                             <constraint firstAttribute="bottom" secondItem="9GV-Hb-ebx" secondAttribute="bottom" id="32l-69-mnx"/>
                             <constraint firstItem="9GV-Hb-ebx" firstAttribute="leading" secondItem="YNs-tu-ku9" secondAttribute="leading" id="56y-ZP-iAY"/>
                             <constraint firstItem="zhk-d0-g59" firstAttribute="leading" secondItem="9GV-Hb-ebx" secondAttribute="trailing" constant="8" id="7lu-5r-AXV"/>
+                            <constraint firstItem="HP8-rY-BH5" firstAttribute="leading" secondItem="YNs-tu-ku9" secondAttribute="leading" constant="4" id="CSL-Vq-N17"/>
                             <constraint firstAttribute="trailing" secondItem="gW9-mc-hU0" secondAttribute="trailing" constant="8" id="R8G-EH-85g"/>
                             <constraint firstAttribute="trailing" secondItem="zhk-d0-g59" secondAttribute="trailing" constant="8" id="Xpc-wK-ZxQ"/>
                             <constraint firstItem="gW9-mc-hU0" firstAttribute="top" secondItem="YNs-tu-ku9" secondAttribute="top" constant="8" id="i5U-6o-qbQ"/>
@@ -67,9 +78,15 @@
                 <outlet property="descriptionLabel" destination="zhk-d0-g59" id="Vv8-en-hrD"/>
                 <outlet property="infoContainerView" destination="YNs-tu-ku9" id="kfJ-Or-wQa"/>
                 <outlet property="posterImage" destination="9GV-Hb-ebx" id="qxP-K7-lUa"/>
+                <outlet property="ratingView" destination="HP8-rY-BH5" id="m5f-Jg-nar"/>
                 <outlet property="titleLabel" destination="gW9-mc-hU0" id="hY4-Kv-EdB"/>
             </connections>
-            <point key="canvasLocation" x="198.47328244274809" y="43.309859154929576"/>
+            <point key="canvasLocation" x="198.47328244274809" y="42.605633802816904"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
